<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MyProfile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_pic"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_below="@id/iv_profile_pic"
        android:layout_centerHorizontal="true"
        android:text="@string/my_profile_name"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_track"
        android:layout_below="@id/tv_name"
        android:textSize="20sp"
        android:text="@string/my_profile_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_country"
        android:layout_below="@id/tv_track"
        android:textSize="20sp"
        android:text="@string/my_profile_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_below="@id/tv_country"
        android:textSize="20sp"
        android:text="@string/my_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_below="@id/tv_email"
        android:textSize="20sp"
        android:text="@string/my_profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tv_slack_username"
        android:layout_below="@id/tv_phone"
        android:textSize="20sp"
        android:text="@string/my_profile_slack_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>