<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name" />

    <Button
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_below="@+id/app_name"
        android:id="@+id/button_about_alc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_about_alc" />

    <Button
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_below="@+id/button_about_alc"
        android:id="@+id/button_my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_my_profile" />

</RelativeLayout>